Fix height on mobile screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@ body {
     user-select: none;  /* Chống bôi đen text khi bấm spam */
 }
 
-#root { width: 100%; height: 100vh; }
+#root { width: 100%; height: 100vh; height: 100dvh;}
 #gameCanvas { display: block; width: 100%; height: 100%; }
 
 /* ========================================= */
